# Vero-dlt

./: .env.dev  .env.example  .gitignore  README.md  constants.py  docker-compose.arm64.yaml  docker-compose.yaml  pipeline.py  pyproject.toml  sources.py
.dlt/: secrets.toml
agno/src/agents/gemini/: cube_agent.py
cubejs/: .env.dev
docs/: quickstart.md
docs/ingestion/: dlt.md
docs/semantic/: bsl.md
downstream_apps/: kpi_explorer.py
downstream_apps/api/: models.py  server.py
mcp-server/: .env.dev  .env.example  Dockerfile  pyproject.toml  smithery.yaml
mcp-server/src/mcp_bsl_server/: __init__.py  server.py
metabase/: .env.dev
n8n/: .env.dev  .env.example
nginx/vhost.d/: qdrant.localhost
qdrant/: .env.example
semantics/: model.py  query_builder.py  table_references.py
