[project]
name = "vero-dlt"
version = "0.1.0"
description = "Vero data platform with dlt pipelines and BSL semantic layer"
requires-python = ">=3.11"
dependencies = [
    "dlt[duckdb]>=1.0.0",
    "boring-semantic-layer>=0.2.0",
    "pandas>=2.0.0",
    "ibis-framework[duckdb]",
    "fastapi[standard]>=0.100.0",
    "streamlit>=1.30.0",
    "mcp>=1.2.1",
    "pyyaml>=6.0.2",
    "python-dotenv",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantics", "downstream_apps"]

[tool.uv]
dev-dependencies = ["pyright>=1.1.389"]
